# UPLOAD-IASD

./: .gitignore  README.md  index.html  package-lock.json  package.json  server.js  start.bat
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  whatsapp-bot.cjs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  log.rs  main.rs  upload_server.rs
src-tauri/wix/: metadata.wxs  shortcuts.wxs
src/components/: LoadingScreen.tsx  UpdateChecker.tsx
src/components/Tutorial/: Tutorial.tsx
src/components/aside/: aside.tsx
src/controllers/: fileController.js  videoController.js  whatsappController.js
src/lib/: app-store.ts  logger.ts  settings-store.ts  useSettings.ts
src/pages/about/: page.tsx
src/pages/dashboard/: page.tsx
src/pages/history/: page.tsx
src/pages/home/: page.tsx
src/pages/logs/: page.tsx
src/pages/settings/: page.tsx
src/pages/welcome/: page.tsx  reset-welcome.md
src/pages/whatsapp/: page.tsx
src/pages/youtube/: page.tsx
src/public/: baixarvideo.html  comousar.html  downloads.html  index.html  success.html
src/routes/: index.tsx  videoRoutes.js
